<resources>
    <string name="app_name">BCA 4 Sem</string>
    <string name="arrayvbunit3">An array stores a fixed-size sequential collection of elements of the same type. An array is
        used to store a collection of data, but it is often more useful to think of an array as a collection of variables of the same type.\n
        All arrays consist of contiguous memory locations. The lowest address corresponds to the first element and the highest address to the last element\n\n\n</string>
    <string name="declaringarray">
    To declare an array in VB.Net, you use the Dim statement. For example\n
    1) Dim intData(30)	  — an array of 31 elements\n
    2)Dim strData(20) As String	— an array of 21 strings\n
    3)Dim twoDarray(10, 20) As Integer	—a two dimensional array of integers\n
        4)Dim ranges(10, 100)	 —a two dimensional array\n\n\n
    You can also initialize the array elements while declaring the array. For example:-\n\n
        Dim intData() As Integer = {12, 16, 20, 24, 28, 32}\n
        "Dim names() As String = {\"mohit\",\"navdeep\"}"\n\n


    </string>
    <string name="dynamicarray">
        Dynamic arrays are arrays that can be dimensioned and re-dimensioned as par the need of the program.
        You can declare a dynamic array using the ReDim statemen\n
       Syntax for ReDim statement −\n
        ReDim [Preserve] arrayname(subscripts)\n
        Where,\n\n
        The Preserve keyword helps to preserve the data in an existing array, when you resize it.\n
        <B>arrayname</B> is the name of the array to re-dimension\n
             subscripts specifies the new dimension.\n\n



    </string>
    <string name="creating_array_in_vb_net"><b><u>Creating array in vb.net:-</u></b>\n\n</string>
    <string name="unit2vbvar">A variable is nothing but a name given to a storage area that our programs can manipulate. Each variable in VB.Net has a specific type, which determines the size and layout of the variable\'s memory; the range of values that can be stored within that memory; and the set of operations that can be applied to the variable.\n
        We have already discussed various data types. The basic value types provided in VB.Net can be categorized as \n\n
        1)Integral types	    :- SByte, Byte, Short, UShort, Integer, UInteger, Long, ULong and Char\n
        2)Floating point type :- Single and Double\n
        3)Decimal types       :- Decimal\n
        4)Boolean types       :-True or False values, as assigned\n
        5)Date types	   :-Date\n\n\n
        VB.Net also allows defining other value types of variable like Enum and reference types of variables like Class. \n\n











    </string>
    <string name="variable_declaration_in_vb_net">Variable Declaration in VB.Net</string>
    <string name="vardeclarationunit2">The Dim statement is used for variable declaration and storage allocation for one or more variables. The Dim statement is used at module, class, structure, procedure or block level.\n\n
    Syntax for variable declaration in VB.Net is −\n
        [  attributelist ] [ accessmodifier ] [[ Shared ] [ Shadows ] | [ Static ]]\n
            [ ReadOnly ] Dim [ WithEvents ] variablelist\n\\n
Where\n\n
        #attributelist is a list of attributes that apply to the variable. Optional.\n
        #accessmodifier defines the access levels of the variables, it has values as - Public, Protected, Friend, Protected Friend and Private. Optional.\n
        #Shared declares a shared variable, which is not associated with any specific instance of a class or structure, rather available to all the instances of the class or structure. Optional.\n
        #Shadows indicate that the variable re-declares and hides an identically named element, or set of overloaded elements, in a base class. Optional.\n
        #Static indicates that the variable will retain its value, even when the after termination of the procedure in which it is declared. Optional.\n
        #ReadOnly means the variable can be read, but not written. Optional.\n
        #WithEvents specifies that the variable is used to respond to events raised by the instance assigned to the variable. Optional.\n
        #Variablelist provides the list of variables declared.\n\n
        Some valid variable declarations along with their definition are shown here −\n\n

Dim StudentID As Integer\n
Dim StudentName As String\n
Dim Salary As Double\n
Dim count1, count2 As Integer\n
Dim status As Boolean\n
Dim exitButton As New System.Windows.Forms.Button\n
Dim lastTime, nextTime As Date\n




















    </string>
    <string name="datatypenvmet">Data types refer to an extensive system used for declaring variables or functions of different types. The type of a variable determines how much space it occupies in storage and how the bit pattern stored is interpreted.\n


</string>
    <string name="datatypeexvb">VB.Net provides a wide range of data types. The following table shows all the data types available −\n

    Boolean	,Byte,Char,Date,Decimal,Double,Integer,Long	,Object,SByte,Short,Single,Strin,UInteger,ULong,User-Defined,UShort	\n\n







    </string>
    <string name="operatorsvbnet">
        An operator is a symbol that tells the compiler to perform specific mathematical or logical manipulations. VB.Net is rich in built-in operators and provides following types of commonly used operators −\n

# Arithmetic Operators\n

# Comparison Operators\n

# Logical/Bitwise Operators\n

# Bit Shift Operators\n

# Assignment Operators\n

# Miscellaneous Operators\n





    </string>
    <string name="vbnetifelse">An If statement can be followed by an optional Else statement, which executes when the Boolean expression is false.\n\
    Syntax\n\n
        The syntax of an If...Then... Else statement in VB.Net is as follows −\n
        If(boolean_expression)Then\n
           statement(s) will execute if the Boolean expression is true \n
        Else\n
          statement(s) will execute if the Boolean expression is false \n
        End If\n\n\n

        If the Boolean expression evaluates to true, then the if block of code will be executed, otherwise else block of code will be executed.\n
    </string>
    <string name="ifelseifelseinvb">An If statement can be followed by an optional Else if…Else statement, which is very useful to test various conditions using single If…Else If statement.\n
    When using If… Else If... Else statements, there are few points to keep in mind.\n
        1.An If can have zero or one Else\'s and it must come after an Else Ifs.\n
        2.An If can have zero to many Else If\'s and they must come before the Else.\n
        3.Once an Else if succeeds, none of the remaining Else If\'s or Else\'s will be tested.\n\n


        The syntax of an if...else if...else statement in VB.Net is as follows −\n\n


If(boolean_expression 1)Then\n
           \' Executes when the boolean expression 1 is true \n
        ElseIf( boolean_expression 2)Then\n
            Executes when the boolean expression 2 is true \n
        ElseIf( boolean_expression 3)Then\n
         Executes when the boolean expression 3 is true \n
        Else \n
        \'  executes when the none of the above condition is true \n
        End If\n\n
    </string>
    <string name="selectvbcase">A Select Case statement allows a variable to be tested for equality against a list of values. Each value is called a case, and the variable being switched on is checked for each select case.\n
    The syntax for a Select Case statement in VB.Net is as follows −\n
        Select [ Case ] expression\n
           [ Case expressionlist\n
              [ statements ] ]\n
           [ Case Else\n
              [ elsestatements ] ]\n
        End Select\n










    </string>
    <string name="fornextvb">It repeats a group of statements a specified number of times and a loop index counts the number of loop iterations as the loop executes.\n
    The syntax for this loop construct is −\n\n
For counter [ As datatype ] = start To end [ Step step ]\n
           [ statements ]\n
           [ Continue For ]\n
           [ statements ]\n
           [ Exit For ]\n
   [ statements ]\n
        Next [ counter ]\n

       Module loops\n
   Sub Main()\n
      Dim a As Byte\n
      \' for loop execution\n
      For a = 10 To 20\n
          Console.WriteLine("value of a: {0}", a)\n
      Next\n
      Console.ReadLine()\n
   End Sub\n
End Module\n\n\n\n
When the above code is compiled and executed, it produces the following result −\n\n

value of a: 10\n
value of a: 11\n
value of a: 12\n
value of a: 13\n
value of a: 14\n
value of a: 15\n
value of a: 16\n

value of a: 17\n
value of a: 18\n
value of a: 19\n
value of a: 20\n









    </string>
    <string name="eachnextloop">


        It repeats a group of statements for each element in a collection. This loop is used for accessing and manipulating all elements in an array or a VB.Net collection.\n\n

The syntax for this loop construct is −\n\n

For Each element [ As datatype ] In group\n
   [ statements ]\n
   [ Continue For ]\n
   [ statements ]\n
   [ Exit For ]\n
   [ statements ]\n
Next [ element ]\n
Example\n
Live Demo\n
Module loops\n
   Sub Main()\n
      Dim anArray() As Integer = {1, 3, 5, 7, 9}\n
      Dim arrayItem As Integer\n
        \'displaying the values\n\n\n

      For Each arrayItem In anArray\n
         Console.WriteLine(arrayItem)\n

      Next\n
      Console.ReadLine()\n
   End Sub\n
End Module\n
When the above code is compiled and executed, it produces the following result −\n\n

1\n
3\n
5\n
7\n
9\n





    </string>
    <string name="doloopinvb">
       do loop-\n

        it repeats the enclosed block of statements while a Boolean condition is True or until the condition becomes True. It could be terminated at any time with the Exit Do statement.\n\n

The syntax for this loop construct is −\n\n

Do { While | Until } condition\n
   [ statements ]\n
   [ Continue Do ]\n
   [ statements ]\n
   [ Exit Do ]\n
   [ statements ]\n

Loop\n
-or-\n

Do\n
   [ statements ]\n
   [ Continue Do ]\n
   [ statements ]\n
   [ Exit Do ]\n
   [ statements ]\n
Loop { While | Until } condition\n

Example\n\n
Module loops\n
   Sub Main()\n
      \' local variable definition \n
      Dim a As Integer = 10\n
      \'do loop execution \n
      Do\n
          Console.WriteLine("value of a: {0}", a)\n
          a = a + 1\n
      Loop While (a &lt; 20)\n
      Console.ReadLine()\n
   End Sub\n
End Module\n
When the above code is compiled and executed, it produces the following result −\n\n

value of a: 10\n
value of a: 11\n
value of a: 12\n
value of a: 13\n
value of a: 14\n
value of a: 15\n
value of a: 16\n
value of a: 17\n
value of a: 18\n
value of a: 19\n
The program would behave in same way, if you use an Until statement, instead of While −\n\n


Module loops\n
   Sub Main()\n
      \' local variable definition\n
      Dim a As Integer = 10\n
     \'do loop execution\n

      Do\n\n
          Console.WriteLine("value of a: {0}", a)\n
          a = a + 1\n
      Loop Until (a = 20)\n
      Console.ReadLine()\n
   End Sub\n
End Module\n
When the above code is compiled and executed, it produces the following result −\n\n

value of a: 10\n
value of a: 11\n
value of a: 12\n
value of a: 13\n
value of a: 14\n
value of a: 15\n
value of a: 16\n
value of a: 17\n
value of a: 18\n
value of a: 19\n




    </string>
    <string name="whilenwetloop">
        While While next \n\n
         It    executes a series of statements as long as a given condition is True.\n\n

The syntax for this loop construct is −\n\n

While condition\n
   [ statements ]\n
   [ Continue While ]\n
   [ statements ]\n
   [ Exit While ]\n
   [ statements ]\n
End While\n
Here, statement(s) may be a single statement or a block of statements. The condition may be any expression, and true is logical true. The loop iterates while the condition is true.\n\n


    </string>
</resources>