<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vbnetActivities.vbnet_Unit_2">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:text="@string/unit2vbvar"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:text="@string/variable_declaration_in_vb_net"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"


          android:text="@string/vardeclarationunit2"
          />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:text="@string/datatypenvmet"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="Data Types Available in VB.Net"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/datatypeexvb"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/operatorsvbnet"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Control Structures"
                android:textSize="22sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="If...Then...Else Statement"/>
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"

                  android:text="@string/vbnetifelse"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:src="@drawable/ifelsevb"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="The If...Else If...Else Statement
               "/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ifelseifelseinvb"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="22sp"
                   android:text="Select case statement"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectvbcase"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:src="@drawable/switchcasevb"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:src="@drawable/switchcaseexvb"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="For Next loop:-"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fornextvb"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eachnextloop"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doloopinvb"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whilenwetloop"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>