<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vbnetActivities.vbnet_Unit_3">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#090101"
            android:text="Array"/>


        <com.bluejamesbond.text.DocumentView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:documentView_textAlignment="justified"
         app:documentView_textSize="18sp"
            app:documentView_textColor="#090101"
            android:defaultFocusHighlightEnabled="true"
            app:documentView_textFormat="formatted"
            app:documentView_insetPaddingLeft="8dp"
         app:documentView_text="@string/arrayvbunit3"
    />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/arraysvbnet"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creating_array_in_vb_net"
            />
    <com.bluejamesbond.text.DocumentView
        android:layout_width="wrap_content"
        app:documentView_textAlignment="justified"
        app:documentView_textColor="#090101"
        android:layout_height="wrap_content"
        app:documentView_text="@string/declaringarray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:paddingLeft="10dp"
        android:textColor="#090101"
        android:text="dynamic array"/>
    <com.bluejamesbond.text.DocumentView
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:documentView_textColor="#090101"
        app:documentView_textAlignment="justified"
        app:documentView_text="@string/dynamicarray" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:src="@drawable/vbdyanamic_array"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="When the above code is compiled and executed, it produces the following result −"
            android:textColor="#090101"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/dynamic_arrayanswer"/>



    </LinearLayout>
</ScrollView>
</LinearLayout>